# TRPG_PLATFORM

./: .env.example  .gitattributes  .gitignore  00_INPUT_ANALYSIS_AND_TRACEABILITY.md  01_OVERALL_CONSTRUCTION_PLAN.md  02_STAGE_CONFIRMATION_MATRIX.md  03_ENGINEERING_DIRECTORY_PLAN.md  04_TEST_STRATEGY_AND_TEST_DATA.md  05_CI_CD_CONFIGURATION.md  AGENTS.P2.ADDENDUM.md  AGENTS.md  CI_CD_EXTRACTION_PROMPT.md  CODEX_MASTER_EXECUTION_GUIDE.md  CODEX_MASTER_PROMPT.md  CODEX_P2_MASTER_PROMPT.md  CODEX_RELEASE_PREPARATION_GUIDE.md  CODEX_STANDALONE_BOOTSTRAP_PROMPT.md  CODEX_START_ACCEPT_TEST_RELEASE_GUIDE.md  CODEX_STRICT_OPERATION_CHECKLIST.md  Cargo.toml  DECISIONS.md  DECISION_CHANGELOG.md  DOCUMENT_ORGANIZATION_AND_AUDIT_BOUNDARY.md  MANIFEST.md  P00_REMOTE_CANONICALIZATION_DECISION.md  PER_STAGE_FIXTURE_EXPANSION_PLAN.md  README.md  ROADMAP.md  SOURCE_BUNDLE_INTEGRATION_GUIDE.md  STRICT_LINK_AND_REFERENCE_VALIDATION.md  STRICT_REPAIR_CHANGELOG.md  TODO.md  V1_ACCEPTANCE_EVIDENCE_MATRIX.md  V221_FULL_PACKAGE_MARKDOWN_CLEANUP_REPORT.md  compose.yaml  compose.yml  docker-compose.ci.yml  docker-compose.dev-db.yml  package.json  pnpm-lock.yaml  (+1 more)
apps/agent-worker/: Cargo.toml
apps/agent-worker/src/: main.rs
apps/api-server/: Cargo.toml
apps/api-server/src/: lib.rs  main.rs  production_custody_tests.rs
apps/api-server/tests/: auth_http_integration.rs  canonical_replay_integration.rs
apps/migration-runner/: Cargo.toml
apps/migration-runner/src/: main.rs
apps/realtime-server/: Cargo.toml
apps/realtime-server/src/: main.rs
crates/auth/: Cargo.toml
crates/auth/src/: lib.rs
crates/rag_core/: Cargo.toml
crates/rag_core/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  main.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
crates/trpg-agent-runtime/: Cargo.toml
crates/trpg-agent-runtime/src/: adr_0009_agent_governance.rs  adr_0009_agent_governance_agent_governance.rs  adr_0010_rag_snapshot.rs  agent_context_assembler.rs  agent_evaluation_golden_scenario.rs  agent_pack_sdk.rs  agent_runtime.rs  agent_runtime_impl.rs  agent_runtime_tool_protocol.rs  ai_agent.rs  ai_evaluation_golden_scenario.rs  ai_evaluation_runtime.rs  evaluation_golden_scenario.rs  evaluation_golden_scenario_impl.rs  lib.rs  local_model_certification.rs  memory_rag.rs  memory_rag_impl.rs  memory_rag_rag_snapshot.rs  model_provider.rs  model_provider_local_cloud.rs  model_provider_local_cloud_impl.rs  plugin_ruleset_agent_pack_sdk.rs  rag_snapshot.rs  rag_snapshot_impl.rs  readme.rs  tool_protocol.rs  working_memory_long_memory_rag.rs  working_memory_rag_rag_snapshot.rs
crates/trpg-agent-runtime/tests/: adr_0009_agent_governance_contract_tests.rs  adr_0010_rag_snapshot_contract_tests.rs  agent_pack_sdk_contract_tests.rs  agent_runtime_impl_contract_tests.rs  ai_agent_contract_tests.rs  batch_017_agent_runtime_contract_tests.rs  evaluation_golden_scenario_contract_tests.rs  evaluation_golden_scenario_impl_contract_tests.rs  internal_identity_gate.rs  memory_rag_impl_contract_tests.rs  model_provider_local_cloud_impl_contract_tests.rs  plugin_ruleset_agent_pack_sdk_contract_tests.rs  rag_snapshot_impl_contract_tests.rs  readme_contract_tests.rs  wire_error_contract_tests.rs
crates/trpg-api/: Cargo.toml
crates/trpg-api/src/: api.rs  api_and_transport.rs  api_contracts.rs  api_web_socket.rs  api_web_socket_g_rpc_schema.rs  contract_core.rs  external_provider_contracts.rs  lib.rs  nats_subject_contracts.rs  openapi.rs  openapi_contract.rs  openapi_index.rs  provider.rs  readme.rs  realtime_room_sync.rs  realtime_sync.rs  request_idempotency_contract.rs  websocket_protocol.rs
crates/trpg-api/tests/: api_and_transport_contract_tests.rs  api_contract_tests.rs  api_contracts_contract_tests.rs  api_web_socket_contract_tests.rs  api_web_socket_g_rpc_schema_contract_tests.rs  batch_029_api_realtime_contract_tests.rs  canonical_event_openapi_contract_tests.rs  external_provider_contracts_contract_tests.rs  nats_subject_contracts_contract_tests.rs  openapi_contract_contract_tests.rs  openapi_contract_tests.rs  openapi_index_contract_tests.rs  provider_contract_tests.rs  readme_contract_tests.rs  realtime_room_sync_contract_tests.rs  realtime_sync_contract_tests.rs  request_idempotency_contract_contract_tests.rs  s08_fixture_acceptance_contract_tests.rs  websocket_protocol_contract_tests.rs
crates/trpg-data-eventing/: Cargo.toml
crates/trpg-data-eventing/src/: adr_0002_event_sourcing_cqrs.rs  adr_0002_event_sourcing_cqrs_event_sourcing_cqrs.rs  adr_0004_nats_jetstream.rs  adr_0005_postgres_pgvector.rs  adr_0005_postgres_pgvector_postgre_sql_pgvector.rs  adr_0010_rag_snapshot_rag_snapshot.rs  api_websocket_nats_contracts.rs  cache_redis.rs  cache_redis_impl.rs  database_schema_index.rs  domain_event_sourcing_projection.rs  event_bus_nats.rs  event_bus_nats_impl.rs  event_command_json_schema.rs  event_json_schema.rs  event_json_schema_source_contract.rs  event_schema_index.rs  event_sourcing_snapshot_projection.rs  event_store_projections.rs  event_store_sqlx_outbox_projection.rs  lib.rs  nats_jet_stream.rs  nats_subject_contracts.rs  nats_subjects.rs  nats_subjects_source_contract.rs  outbox_projection_workers.rs  persistence_migrations.rs  persistence_postgresql.rs  persistence_postgresql_impl.rs  postgre_sql_sq_lx_pgvector.rs  rag_snapshot.rs  readme.rs  redis_cache_presence.rs  redis_presence.rs  schema.rs  snapshot.rs  snapshot_strategy.rs  sqlx_migrations.rs  sqlx_migrations_contract.rs
crates/trpg-data-eventing/tests/: adr_0002_event_sourcing_cqrs_contract_tests.rs  adr_0005_postgres_pgvector_contract_tests.rs  batch_024_data_eventing_contract_tests.rs  batch_025_data_eventing_contract_tests.rs  canonical_commit_postgres.rs  (+8 more)
crates/trpg-extension-sdk/: Cargo.toml
crates/trpg-identity/: Cargo.toml
crates/trpg-ops/: Cargo.toml
crates/trpg-platform/: Cargo.toml
crates/trpg-ruleset-coc7/: Cargo.toml
crates/trpg-runtime/: Cargo.toml
crates/trpg-security-governance/: Cargo.toml
crates/trpg-shared-kernel/: Cargo.toml
crates/trpg-testing/: Cargo.toml
(+3832 files in other folders)
