[workspace]
members = [
    "crates/trpg-shared-kernel",
    "crates/trpg-domain-core",
    "crates/trpg-runtime",
    "crates/trpg-agent-runtime",
    "crates/trpg-ruleset-coc7",
    "crates/trpg-data-eventing",
    "crates/trpg-api",
    "crates/trpg-platform",
    "crates/trpg-security-governance",
]
resolver = "2"
