[workspace]
members = [
    "crates/trpg-contracts",
    "crates/trpg-contracts/test-support",
    "crates/trpg-identity",
    "crates/trpg-shared-kernel",
    "crates/trpg-domain-core",
    "crates/trpg-runtime",
    "crates/trpg-agent-runtime",
    "crates/trpg-ruleset-coc7",
    "crates/trpg-data-eventing",
    "crates/trpg-api",
    "crates/trpg-platform",
    "crates/trpg-security-governance",
    "crates/trpg-testing",
    "crates/trpg-ops",
    "crates/trpg-extension-sdk",
    "apps/api-server",
    "apps/realtime-server",
    "apps/agent-worker",
    "apps/admin-server",
    "apps/migration-runner",
]
resolver = "2"
