[package]
name = "agent-worker"
version = "0.1.0"
edition = "2021"
publish = false
license = "UNLICENSED"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["rt-multi-thread"] }
trpg-agent-runtime = { path = "../../crates/trpg-agent-runtime" }
trpg-contracts = { path = "../../crates/trpg-contracts" }
trpg-data-eventing = { path = "../../crates/trpg-data-eventing" }
trpg-extension-sdk = { path = "../../crates/trpg-extension-sdk" }
trpg-runtime = { path = "../../crates/trpg-runtime" }
