[package]
name = "api-server"
version = "0.1.0"
edition = "2021"
publish = false
license = "UNLICENSED"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["rt-multi-thread"] }
trpg-api = { path = "../../crates/trpg-api" }
trpg-agent-runtime = { path = "../../crates/trpg-agent-runtime" }
trpg-contracts = { path = "../../crates/trpg-contracts" }
trpg-data-eventing = { path = "../../crates/trpg-data-eventing" }
trpg-identity = { path = "../../crates/trpg-identity" }
trpg-runtime = { path = "../../crates/trpg-runtime" }
trpg-security-governance = { path = "../../crates/trpg-security-governance" }
trpg-shared-kernel = { path = "../../crates/trpg-shared-kernel" }

[dev-dependencies]
trpg-test-support = { path = "../../crates/trpg-contracts/test-support" }
