[package]
name = "realtime-server"
version = "0.1.0"
edition = "2021"
publish = false
license = "UNLICENSED"

[dependencies]
tokio = { version = "1.48", features = ["rt-multi-thread"] }
trpg-api = { path = "../../crates/trpg-api" }
trpg-contracts = { path = "../../crates/trpg-contracts" }
trpg-data-eventing = { path = "../../crates/trpg-data-eventing" }
