[package]
name = "server"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
observability = { path = "../observability" }
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tower.workspace = true

[dev-dependencies]
http.workspace = true
serde_json.workspace = true
