[package]
name = "server"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
auth = { path = "../auth" }
base64.workspace = true
hmac.workspace = true
observability = { path = "../observability" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
storage = { path = "../storage" }
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tower.workspace = true
uuid.workspace = true

[dev-dependencies]
http.workspace = true
serde_json.workspace = true
sqlx.workspace = true
