[package]
name = "trpg-agent-runtime"
version = "0.1.0"
edition = "2021"
publish = false
license = "UNLICENSED"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
trpg-contracts = { path = "../trpg-contracts" }
trpg-identity = { path = "../trpg-identity" }
trpg-security-governance = { path = "../trpg-security-governance" }
trpg-shared-kernel = { path = "../trpg-shared-kernel" }

[dev-dependencies]
trpg-test-support = { path = "../trpg-contracts/test-support" }
