[package]
name = "trpg-data-eventing"
version = "0.1.0"
edition = "2021"
publish = false
license = "UNLICENSED"

[dependencies]
trpg-contracts = { path = "../trpg-contracts" }
trpg-shared-kernel = { path = "../trpg-shared-kernel" }

[dev-dependencies]
trpg-test-support = { path = "../trpg-contracts/test-support" }
