[package]
name = "trpg-identity"
version = "0.1.0"
edition = "2021"
publish = false
license = "UNLICENSED"

[dependencies]
argon2 = "0.5.3"
hmac = "0.12.1"
native-tls = "0.2.14"
postgres = "0.19.14"
postgres-native-tls = "0.5.3"
rand_core = { version = "0.6.4", features = ["getrandom"] }
redis = { version = "1.0", default-features = false, features = ["script"] }
sha2 = "0.10.9"
trpg-shared-kernel = { path = "../trpg-shared-kernel" }
