[package]
name = "trpg-platform"
version = "0.1.0"
edition = "2021"
publish = false
license = "UNLICENSED"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
trpg-shared-kernel = { path = "../trpg-shared-kernel" }

[dev-dependencies]
trpg-test-support = { path = "../trpg-contracts/test-support" }
