[package]
name = "trpg-ruleset-coc7"
version = "0.1.0"
edition = "2021"
publish = false
license = "UNLICENSED"

[dependencies]
rand_core = { version = "0.6.4", features = ["getrandom"] }
serde = { version = "1.0", features = ["derive"] }
trpg-contracts = { path = "../trpg-contracts" }
trpg-shared-kernel = { path = "../trpg-shared-kernel" }

[dev-dependencies]
trpg-test-support = { path = "../trpg-contracts/test-support" }
