[package]
name = "trpg-runtime"
version = "0.1.0"
edition = "2021"
publish = false
license = "UNLICENSED"

[dependencies]
rand_core = { version = "0.6.4", features = ["getrandom"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "tls-rustls-ring", "postgres"] }
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
trpg-contracts = { path = "../trpg-contracts" }
trpg-identity = { path = "../trpg-identity" }
trpg-security-governance = { path = "../trpg-security-governance" }
trpg-shared-kernel = { path = "../trpg-shared-kernel" }

[dev-dependencies]
trpg-test-support = { path = "../trpg-contracts/test-support" }
