[package]
name = "trpg-security-governance"
version = "0.1.0"
edition = "2021"
publish = false
license = "UNLICENSED"

[dependencies]
hmac = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.9"
trpg-shared-kernel = { path = "../trpg-shared-kernel" }
trpg-identity = { path = "../trpg-identity" }

[dev-dependencies]
trpg-test-support = { path = "../trpg-contracts/test-support" }
