[package]
name = "trpg-shared-kernel"
version = "0.1.0"
edition = "2021"
publish = false
license = "UNLICENSED"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.9"
trpg-contracts = { path = "../trpg-contracts" }

[dev-dependencies]
trpg-test-support = { path = "../trpg-contracts/test-support" }
